# dice-crawl

./: .gitignore  CMakeLists.txt  README.md  map.txt
.github/workflows/: cmake-multiplatform.yml
docs/: map_file_spec.txt  system_info.md
hws/: hw4.md  hw5.md
saves/: map.txt
src/: main.cpp
src/game/: color.hpp  dice.hpp  direction.cpp  direction.hpp  esc_menu.cpp  esc_menu.hpp  game.cpp  game.h  game.hpp  item.cpp  item.hpp  main_menu.cpp  main_menu.hpp  map.cpp  map.hpp  mob.cpp  mob.hpp  player.cpp  player.hpp  program.cpp  program.hpp  roaming.cpp  roaming.hpp  room.cpp  room.hpp  state.hpp  tile.cpp  tile.hpp
src/game/character/: character.cpp  character.hpp  player.cpp  player.hpp
src/game/character/mob/: confused.cpp  confused.hpp  coward.cpp  coward.hpp  fantasy_mob.cpp  fantasy_mob.hpp  hostile.cpp  hostile.hpp  mob.cpp  mob.hpp  mob_decorator.cpp  mob_decorator.hpp  passive.cpp  passive.hpp  sci_fi_mob.cpp  sci_fi_mob.hpp
src/game/character/mob/strategy/: coward.cpp  coward.hpp  hostile.cpp  hostile.hpp  mold.cpp  mold.hpp  passive.cpp  passive.hpp
src/game/program_mode/: esc_menu.cpp  esc_menu.hpp  game.cpp  game.hpp  game_command.cpp  game_command.hpp  game_over.cpp  game_over.hpp  level_up.cpp  level_up.hpp  main_menu.cpp  main_menu.hpp  menu.cpp  menu.hpp  program_mode.hpp
src/model/: scene.hpp
src/model/ecs/: gameobject.hpp  world.hpp
src/model/ecs/components/: collider.hpp  controller.hpp  logger.hpp  transform.hpp
src/platform/: files.cpp  files.hpp  main.cpp  renderer.cpp  renderer.hpp
src/utils/: inrange.hpp  random.cpp  random.hpp
tests/: CMakeLists.txt
tests/game/: TestMapGen.cpp  TestPlayer.cpp  test_item.cpp  test_map.cpp  test_menu.cpp  test_mob.cpp  test_player.cpp  test_program.cpp  test_room.cpp
